# hybrid_FEM_SBI

./: CMakeCache.txt  CMakeLists.txt  LICENSE.txt  README.md
cmake/Modules/: FindFFTW.cmake  FindGSL.cmake
junk/: CMakeLists.txt  Makefile  cmake_install.cmake
junk/junk_simulation/: CMakeLists.txt  Makefile  cmake_install.cmake  junk_Q4.cc  junk_hello_world.cc  junk_main.cc  junk_parallel_fault_run_reg.cc  junk_test.cc  junk_test_abaqus_run_incline.cc  junk_test_abaqus_run_incline_multi.cc  test_abaqusio.cc
simulations/: CMakeLists.txt
simulations/biegel_exp/: CMakeLists.txt  biegel_test.cc  biegel_test_old.cc  biegel_test_plastic.cc
simulations/biegle_exp_exodus/: CMakeLists.txt  biegel_test_plastic_exodus.cc
simulations/find_steady_state/: CMakeLists.txt  homo.cc
simulations/fish_bone/: CMakeLists.txt  fish_bone.cc
simulations/fish_bone_bie_domain/: CMakeLists.txt  fish_bone_bie_domain.cc
simulations/fish_bone_homo/: CMakeLists.txt  fish_bone_homo.cc
simulations/fish_bone_homo_plasticity/: CMakeLists.txt  fish_bone_homo_plasticity.cc
simulations/fish_bone_plasticity/: CMakeLists.txt  fish_bone_plasticity.cc
simulations/parallel_faults/: CMakeLists.txt  bimaterial.cc  bimaterial_reg.cc  p_f_batch.pbs  parallel_fault_run.cc  parallel_fault_run_reg.cc  parallel_fault_run_reg_12_5m.cc  parallel_fault_run_reg_3_125m.cc  parallel_fault_run_reg_3_125m_R05.cc  parallel_fault_run_reg_3_125m_homo.cc  parallel_fault_run_reg_3_125m_multi.cc  parallel_fault_run_reg_6_25m.cc  parallel_fault_run_reg_plastic.cc  test_mat.txt
simulations/plasticity/: CMakeLists.txt  parallel_fault_run_reg_plastic.cc  parallel_fault_run_reg_plastic_oldold.cc
simulations/rate_and_state_Abaqus/: CMakeLists.txt  input_Rate_and_State_Aging_Abaqus.cc
simulations/rate_and_state_generated/: CMakeLists.txt  input_Rate_and_State_Aging_Generated.cc  rate_and_state_input_new.cc
simulations/tpv14_2d/: CMakeLists.txt  tpv14_2d_100m.inp  tpv14_2d_run.cc  tpv14_2d_run_with_buffer.cc
simulations/tpv14_2d_new_test/: CMakeLists.txt  tpv14_2d_new_test.cc
simulations/tpv5_2d/: CMakeLists.txt  junk_tpv5_2d_generated_run.cc  junk_tpv5_2d_run.cc  tpv5_2d.cc
simulations/wedge_rate_and_state/: CMakeLists.txt  wedge_rate_and_state.cc
simulations/wedge_slip_weak/: CMakeLists.txt  wedge_slip_weak.cc
src/: CMakeLists.txt
src/bie/: BIE_initiation.cpp  BIE_initiation.hpp  bimat_interface.cc  bimat_interface.hh  defrig_interface.cc  defrig_interface.hh  dumper.cc  dumper.hh  fftable_nodal_field.cc  fftable_nodal_field.hh  half_space.cc  half_space.hh  infinite_boundary.cc  infinite_boundary.hh  interface.cc  interface.hh  interface_law.cc  interface_law.hh  kernel.cc  kernel.hh  limited_history.cc  limited_history.hh  material.cc  material.hh  nodal_field.cc  nodal_field.hh  parameter_reader.cc  parameter_reader.hh  precomputed_kernel.cc  precomputed_kernel.hh  preint_kernel.cc  preint_kernel.hh  unimat_interface.cc  unimat_interface.hh
src/bie/interface_laws/: barras_law.cc  barras_law.hh  coulomb_friction_law.cc  coulomb_friction_law.hh  linear_shear_cohesive_law.cc  linear_shear_cohesive_law.hh
src/fem/: Abaqus_read.cpp  Abaqus_read.hpp  Abaqus_read_withAB.cpp  Abaqus_read_withAB.hpp  BIE_correct.cpp  BIE_correct.hpp  Eiglab.h  Getplastic.cpp  Getplastic.hpp  Meshrectangular.cpp  Meshrectangular.hpp  NR_solve_eq10.cpp  NR_solve_eq10.hpp  Rate_and_State_Aging.cpp  Rate_and_State_Aging.hpp  Slip_Weakening.cpp  Slip_Weakening.hpp  Slip_Weakening_bimat.cpp  Slip_Weakening_bimat.hpp  Slip_Weakening_lumpM.cpp  Slip_Weakening_lumpM.hpp  Slip_Weakening_lumpM_with_buffer.cpp  Slip_Weakening_lumpM_with_buffer.hpp  Slip_Weakening_reg.cpp  Slip_Weakening_reg.hpp  Slip_Weakening_reg_bimat.cpp  Slip_Weakening_reg_bimat.hpp  bcdof.cpp  bcdof.hpp  bcdof_ptr.cpp  bcdof_ptr.hpp  cal_BTDB.cpp  cal_BTDB.hpp  cal_Bmat.cpp  cal_Bmat.hpp  cal_M.cpp  cal_M.hpp  cal_M_global_vec.cpp  cal_M_global_vec.hpp  cal_T_abc.cpp  (+41 more)
tests/: CMakeLists.txt
tests/test_simulation/: CMakeLists.txt  Makefile  cmake_install.cmake  fem_bie_couple_fdh.cc  input_Rate_and_State_Aging_Generated.cc  input_Slip_Weakening_Generated.cc  input_Slip_Weakening_Generated_multi_faults.cc  main_v1.cc
