add_subdirectory(parallel_faults)
add_subdirectory(tpv14_2d)
add_subdirectory(tpv5_2d)
add_subdirectory(biegel_exp)
add_subdirectory(plasticity)
add_subdirectory(find_steady_state)
add_subdirectory(biegle_exp_exodus)
add_subdirectory(fish_bone)
add_subdirectory(fish_bone_plasticity)
add_subdirectory(fish_bone_homo)
add_subdirectory(fish_bone_bie_domain)
add_subdirectory(fish_bone_homo_plasticity)
add_subdirectory(rate_and_state_generated)
add_subdirectory(rate_and_state_Abaqus)
add_subdirectory(wedge_slip_weak)
add_subdirectory(wedge_rate_and_state)
add_subdirectory(tpv14_2d_new_test)
